<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="refreshing"
            type="boolean" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#f0eff4"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:titleTextAppearance="@style/AppTheme.Toolbar.Title" />

        <ImageView
            android:id="@+id/iv_refer_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/myToolbar"
            android:contentDescription="@string/image_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_refer_banner" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_refer_image"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/total_refer"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/total_refer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="end"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/_0_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap"
                    tools:text="0" />

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="6sp"
                android:text="@string/refer_code"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="5sp"
                android:text="@string/share_refer_code_with_friends"
                android:textColor="@color/textColorGray"
                android:textSize="14sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="16dp"
                android:background="@drawable/grey_border">

                <TextView
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#3a3939"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RelativeOverlap" />


                <ImageView
                    android:id="@+id/copyImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="13dp"
                    android:contentDescription="@string/image_description"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/copy" />
            </RelativeLayout>


            <Button
                android:id="@+id/btnInvite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_corner_filled_blue"
                android:text="@string/refer_friends"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/tv_faq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/faq_s"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_14sp" />

                <TextView
                    android:id="@+id/tv_tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/t_amp_c"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_14sp" />
            </LinearLayout>
        </LinearLayout>


        <!--  <ProgressBar
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:indeterminate="true"
              android:indeterminateTint="@color/colorAccent"
              android:indeterminateTintMode="src_atop"
              app:visibleGone="@{refreshing}" />-->
    </RelativeLayout>
</layout>


