<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.fp.devfantasypowerxi">
    <data>

        <variable
            name="refreshing"
            type="boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/splash_logo">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:visibility="gone"
                android:layout_marginTop="120dp"
                android:contentDescription="@string/image_description"
                app:src="@drawable/ic_splash_logo" />

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_logo"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:visibility="gone"
                android:text="@string/splash_text"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_text"
                android:layout_marginStart="40dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/are_you_ready"
                android:textColor="#ffffff"
                android:visibility="gone"
                android:textSize="16sp" />
            <!--<ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/progressColor"
                android:indeterminateTintMode="src_atop"
                app:visibleGone="@{refreshing}" />-->
        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>